--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 asgiref==3.3.1
-decouple
 dj-database-url==0.5.0
 Django==3.1.4
 django-heroku==0.3.1
+django-decouple
 gunicorn==20.0.4
 pkg-resources==0.0.0
 psycopg2==2.8.6
