--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.3.1
 dj-database-url==0.5.0
 Django==3.1.4
+django-crispy-forms==1.10.0
 django-heroku==0.3.1
 django-decouple
 gunicorn==20.0.4
@@ -9,3 +10,5 @@ python-decouple==3.3
 pytz==2020.4
 sqlparse==0.4.1
 whitenoise==5.2.0
+
+
