--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-decouple
 gunicorn==20.0.4
 psycopg2==2.8.6
 python-decouple==3.3
+psycopg2==2.8.6
+psycopg2-binary==2.8.6
 pytz==2020.4
 sqlparse==0.4.1
 whitenoise==5.2.0
